...
                            android:layout_marginTop="10dp"
                            android:text="@string/tag_ignored_retry" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/device_settings_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:gravity="center_vertical"
                        android:onClick="@{() -> onClickDeviceName.run()}"
...
